# LIO

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/src/: BasicTimer.cpp  BasicTimer.h  DIRS_FixPeriodTicking.cpp  DIRS_FixPeriodTicking.h  DIRS_JustOneTick.cpp  DIRS_JustOneTick.h  DIRS_TickingByPlan.cpp  DIRS_TickingByPlan.h  DebouncedInput.cpp  DebouncedInput.h  Debouncer.cpp  Debouncer.h  DebouncerImpuseRepeatStrategy.cpp  DebouncerImpuseRepeatStrategy.h  DebouncerStrategy.cpp  DebouncerStrategy.h  DebouncerStrategyCbOnlyOnce.cpp  DebouncerStrategyCbOnlyOnce.h  DebouncerStrategyImpulseRepeat.cpp  DebouncerStrategyImpulseRepeat.h  DebouncerStrategySimple.cpp  DebouncerStrategySimple.h  InputPin.cpp  InputPin.h  MySignal.cpp  MySignal.h  OutputPin.h  SoftTimer.cpp  SoftTimer.h
core/test/: BasicTimerMock.h  CMakeLists.txt  DIRS_FixPeriodTickingTest.cpp  DIRS_JustOneTickTest.cpp  DIRS_TickingByPlanTest.cpp  DeboucerStrategy_mock.h  DebounceStrategyTest.cpp  DebouncedInputTest.cpp  DebouncerImpulseRepeatStrategyTest.cpp  DebouncerStrategyCbOnlyOnceTest.cpp  DebouncerStrategyImpulseRepeatTest.cpp  DebouncerStrategySimpleTest.cpp  DebouncerStrategy_mock.h  Debouncer_test.cpp  InputPinTest.cpp  InputPin_mock.h  SoftTimerTest.cpp
esp32/: CMakeLists.txt  InputPin_ESP32.cpp  InputPin_ESP32.h  LEDPWM_ESP32.cpp  LEDPWM_ESP32.h
example/: CMakeLists.txt  example.cpp
linux/: CMakeLists.txt  InputGpioLib.cpp  InputGpioLib.h  InputPthreadBased.cpp  InputPthreadBased.h  InputSysfs.cpp  InputSysfs.h  OutputGpioLib.cpp  OutputGpioLib.h  OutputSysfs.cpp  OutputSysfs.h  SysfsWrapper.cpp  SysfsWrapper.h
src/: AsyncInput.cpp  AsyncInput.h  CMakeLists.txt  EventHandledInput.cpp  EventHandledInput.h  GPIO_Linux.cpp  GPIO_Linux.h  InputPort.cpp  InputPort.h  OutputPort.cpp  OutputPort.h  example.cpp
test/: CMakeLists.txt  EventHandledInput4Test.h  test_EventHandledInput4Test.cpp
test/googletest/: CMakeLists.txt
