cmake_minimum_required (VERSION 3.13)
project(LIO)
add_subdirectory(core)

if(DEFINED ONLY_LIO_CORE)
    set(LINUX_ENABLED OFF)
    set(EXAMPLE_ENABLED OFF)
    set(ESP32_ENABLED OFF)
else()
    if(NOT DEFINED LINUX_ENABLED)
        set(LINUX_ENABLED ON)
    endif()
    if(NOT DEFINED EXAMPLE_ENABLED)
        set(EXAMPLE_ENABLED ON)
    endif()
    if(NOT DEFINED ESP32_ENABLED)
        set(ESP32_ENABLED OFF)
    endif()
endif()

if(LINUX_ENABLED)
    add_subdirectory(linux)
endif()
if(EXAMPLE_ENABLED)
    add_subdirectory(example)
endif()
if(ESP32_ENABLED)
    add_subdirectory(esp32)
endif()
